--- a/about.html
+++ b/about.html
@@ -201,9 +201,8 @@
             <h2>Meet Our Team</h2>
             <div class="team-grid">
                 <div class="team-member">
-                    <img src="https://source.unsplash.com/400x400/?professional,person" alt="Sarah Johnson">
                     <div class="team-info">
-                        <h3>Sarah Johnson</h3>
+                        <h3>Omkar Purav</h3>
                         <p>Founder & CEO</p>
                         <div class="social-links-team">
                             <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -213,7 +212,6 @@
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src="https://source.unsplash.com/401x401/?professional,person" alt="Michael Chen">
                     <div class="team-info">
                         <h3>Michael Chen</h3>
                         <p>Lead Developer</p>
@@ -225,7 +223,6 @@
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src="https://source.unsplash.com/402x402/?professional,person" alt="Emily Rodriguez">
                     <div class="team-info">
                         <h3>Emily Rodriguez</h3>
                         <p>UX Designer</p>
