--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@
             <div class="contact-method">
                 <i class="fas fa-map-marker-alt"></i>
                 <h3>Visit Us</h3>
-                <p>123 Travel Street<br>Adventure City, AC 12345<br>United States</p>
+                <p>M.G Road<br>Mumbai - 411038<br>India</p>
             </div>
             <div class="contact-method">
                 <i class="fas fa-phone"></i>
